--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -8,11 +8,39 @@
               <%= topic.user.name %>
             </h2>
             <%= image_tag topic.image.url %>
-            <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
+            <% if !topic.favorite_users.include?(current_user) %>
+             <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+              <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
+             <% end %>
+            <% else %>
+             <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
+              <%= image_tag 'icons/heart.png', class: 'topic-index-icon' %>
+             <% end %>
+            <% end %>
+            <%= topic.favorite_users.count %>
             <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
+            <%= topic.comments.count %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
+             <% topic.comments.each do |comment| %>
+               <p class="topic-text">
+                 <%= coment.content %>
+               </p>
+             <% end %>
+
+             <%= form_for @comment do |f| %>
+               <div class="form-group">
+                 <%= f.label :content %>
+                 <%= f.text_area :content, class: 'form-control' %>
+               </div>
+               <% binding.pry %>
+               <%= f.hidden_field :topic_id, value: topic.id %>
+
+               <% if logged_in? %>
+                <%= f.submit 'コメントする', class: 'btn btn-black btn-block' %>
+               <% end %>
+             <% end %>
           </div>
         </div>
       </div>
